# param

./: LICENSE  kineto_trace_analyzer.py  postprocess.py  pyproject.toml  requirements.txt
conf/: comm_replay.toml
docs/: using_ET.md
et_replay/comm/: profiler_trace_analysis.py
et_replay/lib/: et_replay_utils.py
et_replay/tools/: comm_replay.py  et_replay.py
nccl-test/example/: all_gather.txt  all_reduce.txt  reduce_scatter.txt
src/chakra_replay/: __init__.py  chakra_comm_replay.py  chakra_full_replay.py  validate_trace.py
src/chakra_replay/comm/: __init__.py  chakra_comm_replayer.py  comm_op.py  tensor_allocator.py
src/chakra_replay/comm/backend/: __init__.py  backend_context.py  base_backend.py  pytorch_dist_backend.py  pytorch_tpu_backend.py
src/chakra_replay/common/: __init__.py  chakra_comm_trace_parser.py  chakra_replay_profile.py  chakra_replay_timer.py  et_replay_utils.py  execution_trace.py  param_profile.py  param_timer.py  profiler_trace_analysis.py  utils.py
src/chakra_replay/config/: __init__.py  comm_replay_config.py  common_config.py  full_replay_config.py
src/chakra_replay/full/: exgr_replay_manager.py  full_replay.py
tests/: conftest.py  test_execution_trace.py
tests/backend/: test_backend_context.py  test_pytorch_dist_backend.py  test_pytorch_tpu_backend.py
tests/comm/: test_chakra_comm_replayer.py  test_tensor_allocator.py
tests/utils/: test_comms_utils.py
train/comms/pt/: README.md  comms.py  commsTraceParser.py  commsTraceReplay.py  comms_utils.py  dlrm.py  pytorch_backend_utils.py
train/comms/pt/backend/: pytorch_dist.py
train/comms/pt/tests/: commsTraceReplay_tests.py  comms_utils_tests.py
train/compute/python/tools/: execution_trace.py  trace_link.py
(+3 files in other folders)
