[project]
name = "chakra_replay"
dynamic = ["version"]
dependencies = [
    "intervaltree==3.1.0",
    "numpy==1.26.4",
    "pydantic==2.8.2",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
tpu = ["torch-xla>=2.0.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
packages = [
    {include = "chakra_replay", from = "src"},
]

[tool.pdm.version]
source = "scm"

[project.scripts]
comm_replay = "chakra_replay.comm_replay:main"
full_replay = "chakra_replay.full_replay:main"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["I", "B", "E", "D", "F", "SIM", "W", "C90", "EXE", "ERA", "RUF"]
ignore = [
    "D407", # Missing dashed underline after section
    "D203", # Conflicts with D211
    "D212", # Conflicts with D213
    "D413", # Missing blank line after last section

    # TODO: Remove these once we have docstrings
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
empty_parameter_set_mark = "fail_at_collect"

[tool.importlinter]
root_package = "chakra_replay"

[tool.vulture]
min_confidence = 100

[tool.coverage.report]
exclude_also = ["@abstractmethod"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/chakra_replay/comm/backend/pytorch_tpu_backend.py"]
